Removed the horizontal scrolls, fixed the links

--- a/About.css
+++ b/About.css
@@ -2,8 +2,13 @@ body{
     font-family: Kumbh Sans;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .nav {
-    width: 100%; 
+    width: 99%; 
     padding-top: 21px; 
     padding-bottom: 21px; 
     background: rgba(255, 255, 255, 0.50); 
