--- a/contact.css
+++ b/contact.css
@@ -3,10 +3,14 @@ body{
   background-color: black;
   width: 1920px;
 }
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 
 .nav {
-  width: 100%;  
+  width: 99%;  
   padding-top: 21px; 
   padding-bottom: 21px;
   background: black; 
