--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body{
 }
 
 .nav {
-    width: 100%; 
+    width: 99%; 
     padding-top: 21px; 
     padding-bottom: 21px; 
     background: rgba(255, 255, 255, 0.50); 
@@ -111,8 +111,9 @@ body{
 
 .img1{
     display: block;
-    margin-left: 100px;
-    width: 1830px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
     border-radius: 15px;
 
 }
@@ -140,6 +141,7 @@ body{
 }
 
 .header {
+    padding-top:5%;
     height: 87px;
     padding-left: 90px;
     padding-right: 90px;
@@ -196,7 +198,7 @@ body{
     height: 470px;
     justify-content: flex-start;
     align-items: center;
-    gap: 329px;
+    gap:130px;
     display: flex;
 }
 
@@ -230,6 +232,7 @@ body{
     line-height: 31.50px;
     word-wrap: break-word;
     font-family: Kumbh Sans;
+    text-decoration: none;
     transition: 0.3s;
     cursor: pointer;
 }
@@ -258,6 +261,7 @@ body{
 }
 
 .title2 {
+    padding-top:5%;
     color: black;
     font-size: 45px;
     font-weight: 700;
@@ -281,21 +285,25 @@ body{
     gap: 200px;
     display: inline-flex;
     margin-left: 263px;
+    padding-top: 50px;
+    padding-top:6%;
     
 }
 
 .degree {
     width: 370px;
-    height: 507px;
+    /* height: 400px; */
     border-radius: 15px;
+    
     overflow: hidden;
     border: 1px #808080 solid;
     flex-direction: column;
-    justify-content: center;
+  
     align-items: center;
     display: inline-flex;
     transition: 0.3s;
     cursor: pointer;
+    padding-bottom: 70px;
 }
 .degree:hover{
     background-color: rgb(218, 214, 214);
@@ -310,14 +318,18 @@ body{
 .degree-details {
     align-self: stretch;
     height: 47px;
-    padding-left: 20px;
-    padding-right: 20px;
+    /* padding-left: 20px;
+    padding-right: 20px; */
     padding-top: 10px;
     padding-bottom: 10px;
-    justify-content: center;
+    /* justify-content: center; */
+
     align-items: center;
     gap: 10px;
     display: inline-flex;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .degree-title {
@@ -327,9 +339,12 @@ body{
     font-weight: 400;
     line-height: 36px;
     word-wrap: break-word;
+    justify-content: center;
+    padding-top: 30px;
 }
 
 .events-header {
+    padding-top:5%;
     align-self: stretch;
     height: 83px;
     padding-left: 90px;
@@ -476,4 +491,12 @@ body{
     justify-content: flex-start;
     align-items: flex-start;
     gap: 68px;
+}
+a {
+    text-decoration: none;
+}
+
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
